# mlx-retrieval-rs

./: .gitignore  CLAUDE.md  Cargo.toml  MLX-RS.md  Makefile  test_examples.sh
src/: error.rs  lib.rs
src/cli/: mod.rs
src/data/: async_loader.rs  batch.rs  jsonl.rs  mod.rs  stream.rs
src/embed/: extraction.rs  mod.rs  pooling.rs
src/loss/: hard_negative.rs  infonce.rs  mod.rs  ntxent.rs
src/model/: lora.rs  mod.rs
src/training/: mod.rs  optimizer.rs  trainer.rs
